--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,6 +1,8 @@
 <h1>Edit list</h1>
 
-<% if @list.errors.any? %>
+<%= render "form" %>
+
+<!-- <% if @list.errors.any? %>
   <h3>Please fix these errors:</h3>
   <ul>
     <% @list.errors.full_messages.each do |message| %>
@@ -15,4 +17,4 @@
   <%= f.label :description %>
   <%= f.text_field :name %>
   <%= f.submit %>
-<% end %>
+<% end %> -->
