--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,8 @@
 <h1>New list</h1>
 
-<% if @list.errors.any? %>
+<%= render "form" %>
+
+<!-- <% if @list.errors.any? %>
   <h3>Oops there were some errors. Please try again:</h3>
   <ul>
     <% @list.errors.full_messages.each do |message| %>
@@ -13,4 +15,4 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.submit  %>
-<% end %>
+<% end %> -->
