all functions working

--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,8 +1,9 @@
-<%= render "layouts/errors", :object => @list %>
+<%= render 'layouts/errors', :object => @list %>
 
-<%= form_for @list do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-
-  <%= f.submit %>
+<%= form_for(@list) do |f| %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+  <p><%= f.submit :class => "btn btn-primary" %></p>
 <% end %>
