--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, "Home | To Do") %>
+
 <h1>Lists</h1>
 
 <ul>
@@ -6,4 +8,4 @@
   <% end %>
 </ul>
 
-<p><%= link_to "Create a new list", new_list_path %></p>
+<%= link_to "Add list", new_list_path, :class=> "btn btn-default" %>
