--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,18 +1,5 @@
+<% content_for(:title, "New list | To Do") %>
+
 <h1>New list</h1>
 
-<%= render "form" %>
-
-<!-- <% if @list.errors.any? %>
-  <h3>Oops there were some errors. Please try again:</h3>
-  <ul>
-    <% @list.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_for @list do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.submit  %>
-<% end %> -->
+<%= render 'form' %>
