--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,9 @@
-<%= render('layouts/errors', :object => @task) %>
+<%= render 'layouts/errors', :object => @task %>
 
 <%= form_for [@list, @task] do |f| %>
-  <%= f.label :description %>
-  <%= f.text_field :description %>
-  <p><%= f.submit %></p>
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_field :description %>
+  </div>
+  <p><%= f.submit :class => "btn btn-primary" %></p>
 <% end %>
