--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= yield(:title) %></title>
+  <title>ToDo</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container">
-    <div class="jumbotron">
-      <%= flash[:alert] %>
-      <%= flash[:notice] %>
-      <%= yield %>
-    </div>
-  </div>
+
+<%= flash[:alert] %>
+<%= flash[:notice] %>
+
+<%= yield %>
 
 </body>
 </html>
