--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,20 +1,5 @@
+<% content_for(:title, "Edit list | To Do") %>
+
 <h1>Edit list</h1>
 
-<%= render "form" %>
-
-<!-- <% if @list.errors.any? %>
-  <h3>Please fix these errors:</h3>
-  <ul>
-    <% @list.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_for @list do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :description %>
-  <%= f.text_field :name %>
-  <%= f.submit %>
-<% end %> -->
+<%= render 'form' %>
