--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,27 +3,28 @@
 <h1><%= @list.name %></h1>
 
 <% if @list.tasks.any? %>
-  <h4>List Tasks:</h4>
+  <h4>Here are the tasks for this list:</h4>
 
   <ul>
     <% @list.tasks.each do |task| %>
       <li>
         <%= task.description %> |
-        <%= link_to "Edit", edit_list_task_path(@list, task) %> |
+        <%= link_to "Edit", edit_list_task_path(@list, task), :class => "btn btn-default" %> |
         <%= link_to "Delete", list_task_path(@list, task),
                                  :data => {:confirm => "Are you sure?",
-                                                :method => "delete"} %>
+                                 :method => "delete"},
+                                 :class => "btn btn-danger" %>
       </li>
     <% end %>
   </ul>
 <% else %>
-  <p>There are no tasks</p>
+  <p>There are no tasks yet!</p>
 <% end %>
 
-  <div class="links"
-    <p><%= link_to "Add a task", new_list_task_path(@list) %>
-      <%= link_to "Delete List", list_path(@list),
-                            :data => {:confirm => "Are you sure?",
-                                           :method => "delete"} %>
-                  <%= link_to "Return to lists", lists_path %></p>
-  </div>
+<p><%= link_to "Add a task", new_list_task_path(@list), :class => "btn btn-default" %></p>
+<p><%= link_to "Delete List", list_path(@list),
+                        :data => {:confirm => "Are you sure?",
+                        :method => "delete"},
+                        :class => "btn btn-danger" %></p>
+
+<p><%= link_to "Return to lists", lists_path, :class => "btn btn-default" %></p>
